[tool.poetry]
name = "pylift"
version = "0.0.1"
description = "A Dash web app to analyze and visualize workout data"
authors = ["Richard Hughes <57541025+richardh05@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pylift" }]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.0"
pandas = "^2.2"

[tool.poetry.scripts]
pylift = "pylift.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["pylift", "tests"]
select = [
  "F",    # pyflakes: correctness issues
  "E",    # pycodestyle: style issues
  "W",    # pycodestyle warnings
  "I",    # isort: import sorting
  "UP",   # pyupgrade: use modern syntax
  "C90",  # mccabe: complexity checks
]
ignore = [
  "E501"
]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv"
]
respect-gitignore = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
indent-width = 2
skip-magic-trailing-comma = false

[tool.ruff.isort]
known-first-party = ["pylift"]
force-sort-within-sections = true
lines-between-types = 0